Add firts part of home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="football_94104.png" type="image/vnd.microsoft.favicon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=League+Spartan:wght@400;500;600;700&family=Nunito:wght@300;700&display=swap"
+    rel="stylesheet">
 
   <title>Footballers</title>
 </head>
